Fix support for solarized-seti-ui
before, the close 'x' and icon for tab would overlap. Now,
those tabs will get the same padding as the active tab.
Cascades added for `padding: 0` used in base UI Theme.

--- a/styles/close-on-left.less
+++ b/styles/close-on-left.less
@@ -4,6 +4,11 @@ atom-pane .tab-bar {
     &.active .title, .title {
       padding-left: 28px;
     }
+
+    .title[data-name], .title-icon-tools {
+	padding-left: 28px;
+    }
+
     .close-icon {
       margin-left: 4px;
       margin-right: auto;
